maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:82: error: ':' expected but ',' found.
def recursor(x,y,i){
              ^JediEscaper:101: error: identifier expected but ';' found.
def caseAccessible(x : Int, y :Int; dir:Int): Boolean ={
                                  ^JediEscaper:101: error: ';' expected but ')' found.
def caseAccessible(x : Int, y :Int; dir:Int): Boolean ={
                                           ^